
    HDFS-9674. The HTrace span for OpWriteBlock should record the maxWriteToDisk
    time. (cmccabe via zhz)

    HDFS-9094. Add command line option to ask NameNode reload
    configuration. (Xiaobing Zhou via Arpit Agarwal)

    HDFS-9541. Add hdfsStreamBuilder API to libhdfs to support defaultBlockSizes
    greater than 2 GB. (cmccabe via zhz)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-9601. NNThroughputBenchmark.BlockReportStats should handle
    NotReplicatedYetException on adding block (iwasakims)

    HDFS-9618. Fix mismatch between log level and guard in
    BlockManager#computeRecoveryWorkForBlocks (iwasakims)

    HDFS-9621. getListing wrongly associates Erasure Coding policy to pre-existing
    replicated files under an EC directory. (jing9)

Release 2.8.0 - UNRELEASED

  NEW FEATURES

    HDFS-7891. A block placement policy with best rack failure tolerance.
    (Walter Su via szetszwo)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

    HDFS-9184. Logging HDFS operation's caller context into audit logs.
    (Mingliang Liu via jitendra)

  IMPROVEMENTS

    HDFS-9257. improve error message for "Absolute path required" in INode.java
    to contain the rejected path (Marcell Szabo via harsh)

    HDFS-2390. dfsadmin -setBalancerBandwidth does not validate -ve value
    (Gautam Gopalakrishnan via harsh)

    HDFS-8821. Explain message "Operation category X is not supported
    in state standby" (Gautam Gopalakrishnan via harsh)

    HDFS-3918. EditLogTailer shouldn't log WARN when other node
    is in standby mode (todd via harsh)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7875. Improve log message when wrong value configured for
    dfs.datanode.failed.volumes.tolerated.
    (nijel via harsh)

    HDFS-2360. Ugly stacktrace when quota exceeds. (harsh)
