@@ -4891,8 +4891,6 @@ init|=
 operator|new
 name|ExtendedBlock
 argument_list|(
-name|namesystem
-operator|.
 name|getBlockPoolId
 argument_list|()
 argument_list|,
@@ -4936,8 +4934,6 @@ init|=
 operator|new
 name|ExtendedBlock
 argument_list|(
-name|namesystem
-operator|.
 name|getBlockPoolId
 argument_list|()
 argument_list|,
@@ -5214,8 +5210,6 @@ init|=
 operator|new
 name|ExtendedBlock
 argument_list|(
-name|namesystem
-operator|.
 name|getBlockPoolId
 argument_list|()
 argument_list|,
@@ -8477,8 +8471,6 @@ argument_list|(
 operator|new
 name|ExtendedBlock
 argument_list|(
-name|namesystem
-operator|.
 name|getBlockPoolId
 argument_list|()
 argument_list|,
