@@ -20713,10 +20713,7 @@ name|permission
 argument_list|)
 return|;
 block|}
-annotation|@
-name|Override
 DECL|method|checkSuperuserPrivilege ()
-specifier|public
 name|void
 name|checkSuperuserPrivilege
 parameter_list|()
@@ -21761,7 +21758,7 @@ block|{
 name|getEditLog
 argument_list|()
 operator|.
-name|logGenerationStampV1
+name|logLegacyGenerationStamp
 argument_list|(
 name|gs
 argument_list|)
@@ -21772,7 +21769,7 @@ block|{
 name|getEditLog
 argument_list|()
 operator|.
-name|logGenerationStampV2
+name|logGenerationStamp
 argument_list|(
 name|gs
 argument_list|)
