@@ -822,7 +822,7 @@ name|when
 argument_list|(
 name|bid
 operator|.
-name|getGenerationStampV1Limit
+name|getLegacyGenerationStampLimit
 argument_list|()
 argument_list|)
 operator|.
@@ -957,13 +957,13 @@ argument_list|)
 decl_stmt|;
 specifier|final
 name|long
-name|nextGenerationStampV1
+name|nextLegacyGenerationStamp
 init|=
 literal|5000
 decl_stmt|;
 specifier|final
 name|long
-name|nextGenerationStampV2
+name|nextGenerationStamp
 init|=
 literal|20000
 decl_stmt|;
@@ -971,26 +971,26 @@ name|when
 argument_list|(
 name|bid
 operator|.
-name|getNextGenerationStampV1
+name|getNextLegacyGenerationStamp
 argument_list|()
 argument_list|)
 operator|.
 name|thenReturn
 argument_list|(
-name|nextGenerationStampV1
+name|nextLegacyGenerationStamp
 argument_list|)
 expr_stmt|;
 name|when
 argument_list|(
 name|bid
 operator|.
-name|getNextGenerationStampV2
+name|getNextGenerationStamp
 argument_list|()
 argument_list|)
 operator|.
 name|thenReturn
 argument_list|(
-name|nextGenerationStampV2
+name|nextGenerationStamp
 argument_list|)
 expr_stmt|;
 comment|// Make sure that the generation stamp is set correctly for both
@@ -1020,7 +1020,7 @@ argument_list|)
 argument_list|,
 name|is
 argument_list|(
-name|nextGenerationStampV1
+name|nextLegacyGenerationStamp
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1035,7 +1035,7 @@ argument_list|)
 argument_list|,
 name|is
 argument_list|(
-name|nextGenerationStampV2
+name|nextGenerationStamp
 argument_list|)
 argument_list|)
 expr_stmt|;
